syntax = "proto3";

package calculatorPackage;

service CalculatorService {
    rpc doTheMath(Calc) returns (Result);
}

message Calc {
    float num1 = 1;
    float num2 = 2;
    OperationType operation = 3;
}

enum OperationType {
    ADD = 0;
    SUB = 1;
    MUL = 2;
    DIV = 3;
}

message Result {
    string result = 1;
}